test/files/invalid/invalid_enum_type.stderr
error: expected a primitive integer type
  ┌─ test/files/invalid/invalid_enum_type.fbs:1:11
  │
1 │ enum Foo: string {}
  │           ^^^^^^

Error: Bailing because of errors
